# Daylight-know

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: e2e-integration-test-plan.md  ears-design-document.md
docs/plans/: 2026-02-21-e2e-integration-tests.md  2026-02-22-openalex-ranking-design.md  2026-02-22-openalex-ranking-plan.md  2026-02-22-replace-s2-with-openalex.md  2026-03-11-generalize-ranking-increase-fetch-pool.md
docs/superpowers/plans/: 2026-03-25-eli5-section.md  2026-03-25-pipeline-parallelization.md
docs/superpowers/specs/: 2026-03-25-eli5-section-design.md  2026-03-25-pipeline-parallelization-design.md
src/digest_pipeline/: __init__.py  archiver.py  arxiv_topics.py  chunker.py  config.py  emailer.py  extractor.py  fetcher.py  github_trending.py  hf_fetcher.py  llm_utils.py  openalex_fetcher.py  pipeline.py  postprocessor.py  ranker.py  s2_fetcher.py  seen_papers.py  setup.py  summarizer.py  topics_cli.py  vectorstore.py
src/digest_pipeline/prompts/: __init__.py  critiques.md  eli5.md  implications.md  ranker.md  summarizer.md
tests/: conftest.py  stub_llm_server.py  test_arxiv_topics.py  test_emailer.py  test_pipeline.py  test_postprocessor.py  test_summarizer.py
tests/e2e/: conftest.py  test_pipeline_e2e.py
tests/fixtures/: generate_fixtures.py
tests/integration/: conftest.py  test_archiver_integration.py  test_chunker_integration.py  test_config_integration.py  test_emailer_integration.py  test_extractor_integration.py  test_network_smoke.py  test_postprocessor_integration.py  test_summarizer_integration.py  test_vectorstore_integration.py
tests/unit/: conftest.py  test_archiver.py  test_chunker.py  test_config.py  test_emailer.py  test_extractor.py  test_fetcher.py  test_github_trending.py  test_hf_fetcher.py  test_llm_utils.py  test_openalex_fetcher.py  test_pipeline.py  test_postprocessor.py  test_prompts.py  test_ranker.py  test_ranker_config.py  test_s2_fetcher.py  test_seen_papers.py  test_setup.py  test_summarizer.py  test_topics_cli.py  test_vectorstore.py
